# llmx

./: .gitignore  CMakeLists.txt  Config.cmake.in
cmake/: arch.cmake  cc_binary.cmake  cc_library.cmake  cc_test.cmake  dependencies.cmake
csrc/: llmx_bind.cpp  test_attention.py
include/llmx/: dispatch.h  ops.h  scalar.h  tensor.h  utility.h
include/llmx/cuda/attention/: attention_api.h  params.h
include/llmx/cuda/attention/device/: single_mha_kernel.cuh
include/llmx/cuda/common/: fast_cast.h  gather_tensor.h  layout_convertor.h  mask.h  math.h  safe_copy.h  selector.h  softmax.h
src/: CMakeLists.txt  scalar.cu  tensor.cpp  utility.cpp
src/cuda/: CMakeLists.txt
src/cuda/attention/: CMakeLists.txt  attention_api.cpp  gen_instantiations.py
test/: CMakeLists.txt  ops_test.cpp  tensor_test.cpp
test/cuda/: CMakeLists.txt  mha_attention_test.cpp
